# CALO_HVPS_V1.0

./: .gitignore  CALO_HVPS_1.xml  CALO_HVPS_1_test.xml  CALO_HVPS_2.xml  CALO_HVPS_Model.xml  Quasar.xml  calorimeter.map  setup.conf  text.txt
Config/: CMakeLists.txt  ConfigQuasar.cpp  ExamplelibXML2.cpp  ExamplelibXML2.h
ExampleLibXml2/: CMakeLists.txt  ExampleLibXml2.cpp  ExampleLibXml2.h  Quasar.xml  README.txt  main.cpp
Quasar_Manager/: .cproject  .project  CMakeLists.txt  Quasar_Manager.cpp  README.txt
share/: CALO_HVPS_Model.xml  ConfigQuasar.h  Quasar_Manager.hh
src/: .cproject  CALO_HVPS.cpp  CALO_HVPS.h  CALO_HVPS_JL.cpp  CALO_HVPS_JL.h  CMakeLists.txt  README.txt  quasar_callback.cpp  quasar_callback.h
